--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello
+<html>
+  <head>
+  <title>
+  Business on Bot  
+  </title>
+  </head>
+  <body>
+  
+  <a href="https://bot-one-beta.vercel.app/api/search?q=Mumbai&limit=2&offset=1">Search</a><br><br>
+  <a href="https://bot-one-beta.vercel.app/api/branch?q=LONI&limit=1&offset=1">Branch</a><br><br>
+  
+  </body>
+</html>
